@@ -1,0 +1,5 @@
+intro:
+	gcc -Wall -g intro.c intro.h -o intro
+
+clean:
+	rm -rf *.o intro
