@@ -1,0 +1,3 @@
+This is meant to be a low-stakes playground to mess around with the various vagaries of C,
+as well as get acquainted with Linux and its quirks. For instance, VIM is used as the default editor, 
+so you must use 'i' to start writing in a file, and use 'esc' then ':wq' to write and quit the file. 
