@@ -1,0 +1,9 @@
+#ifndef INTRO_H
+#define INTRO_H
+
+void func1a();
+void func1b();
+void func1c();
+void func2a();
+
+#endif
