@@ -1,0 +1,3 @@
+Feb 25:
+    Started re-learning how to write in C by going through old notes
+    should have done this sooner
