@@ -4,4 +4,14 @@ Feb 18:
 Feb 24:
     Started again after assignment was pushed back
     Spent time going through prof's versions of previous assignments
+    used heap implementations from prof to build off of
+    filled out methods with initial implementations
+
+Feb 25:
+    started debugging
+    i love segmentation faults and bus errors
+
+Feb 26:
+    finished debugging, i still like java more
+    turned in!
 
